# EAGv3-Session9

./: .env.example  .gitignore  README.md  agent_config.yaml  cache.py  dashboard_s8.html  dashboard_server.py  flow.py  mcp_runner.py  mcp_server.py  persistence.py  pyproject.toml  recovery.py  replay.py  report.py  skills.py
agent/: action.py  artifacts.py  config.py  decision.py  logger.py  memory.py  perception.py  schemas.py  thinking.py  tracer.py
agent/llm_gateway/: __init__.py  gateway.py
browser/: __init__.py  dom.py  driver.py  extract.py  highlight.py  precondition.py  selectors.py  skill.py
core/: __init__.py  sandbox.py  schemas_v2.py  tracing.py
prompts/: browser.md  coder.md  comparator.md  critic.md  distiller.md  fact_checker.md  formatter.md  planner.md  researcher.md  retriever.md  sandbox_executor.md  screener.md  shell.md  summariser.md  web_builder.md
tests/: test_recovery.py
