[project]
name = "eagv3-session9"
version = "1.0.0"
description = "Browser Agent with DAG Orchestration — Session 9 EAG V3"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
    "google-genai>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "duckduckgo-search>=6.0",
    "markdownify>=0.13",
    "crawl4ai>=0.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "tenacity>=8.2",
    "structlog>=24.0",
    "filelock>=3.13",
    "boto3>=1.35",
    "botocore[crt]>=1.43.14",
    "readability-lxml>=0.8.4.1",
    "lxml>=5.4.0",
    "rich>=15.0.0",
    "googlesearch-python>=1.3.0",
    "tavily-python>=0.7.24",
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "syllapy>=0.7",
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "Pillow>=10.0",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
